--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,34 @@
 [tool.poetry]
 name = "hexlet-code"
 version = "0.1.0"
-description = ""
+description = "Training project - Mind Games. Consists of 5 math games"
 authors = ["Alexander Naymushin <barr85@mail.ru>"]
 readme = "README.md"
+classifiers = [ 
+    "Development Status :: 3 - Alpha",
+    "Operating System :: Unix",
+    "Programming Language :: Python :: 3.10",
+    "Topic :: Education"
+]
+repository = "https://github.com/un-f0rgiven/python-project-49.git"
 packages = [
   { include = "brain_games" },
 ]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+prompt = "^0.4.1"
 
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
+brain-even = "brain_games.scripts.brain_even:main"
+brain-calc = "brain_games.scripts.brain_calc:main"
+brain-gcd = "brain_games.scripts.brain_gcd:main"
+brain-progression = "brain_games.scripts.brain_progression:main"
+brain-prime = "brain_games.scripts.brain_prime:main"
+
+[tool.poetry.group.dev.dependencies]
+flake8 = "^7.0.0"
 
 [build-system]
 requires = ["poetry-core"]
